[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/TitleScreen/Code/ButtonTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/TitleScreen/Assets/BackgroundPixelArt.png" type="Texture" id=2]
[ext_resource path="res://GlobalAssets/Nightmare Codehack.otf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/TitleScreen/Code/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://UI/TitleScreen/Code/Fade.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 363.0
margin_right = 1023.0
margin_bottom = 635.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1023.0
margin_bottom = 75.0
focus_neighbour_left = NodePath("../ExitButton")
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_right = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_mode = 1
buttonText = "Start Game"
arrowMargins = 180
arrowHeightOffset = 2.5

[node name="OptionsButton" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 79.0
margin_right = 1023.0
margin_bottom = 154.0
focus_neighbour_left = NodePath("../StartButton")
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_right = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_mode = 1
buttonText = "Options"
arrowMargins = 125
arrowHeightOffset = 2.5

[node name="ExitButton" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 158.0
margin_right = 1023.0
margin_bottom = 233.0
focus_neighbour_left = NodePath("../OptionsButton")
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_right = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../StartButton")
focus_mode = 1
buttonText = "Exit"
arrowMargins = 85
arrowHeightOffset = 2.5

[node name="Label" type="Label" parent="."]
margin_left = 185.124
margin_top = 7.76204
margin_right = 851.124
margin_bottom = 207.762
rect_min_size = Vector2( 600, 200 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.345098, 0, 0.658824, 1 )
custom_colors/font_color_shadow = Color( 1, 0.878431, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Polymorph"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPixelArt" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512.449, 299.351 )
z_index = -1
texture = ExtResource( 2 )

[node name="Fade" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fadeFinished" from="Fade" to="." method="_on_Fade_fadeFinished"]
